cloudformation/S3-desafio.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Infraestrutura básica AWS com VPC pública e EC2

Parameters:
  KeyName:
    Description: Nome da chave SSH para acesso à instância
    Type: AWS::EC2::KeyPair::KeyName

  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64

Resources:

  MinhaVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-IaC

  SubnetPublica:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MinhaVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subnet-Publica

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: IGW-IaC

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MinhaVPC
      InternetGatewayId: !Ref InternetGateway

  RotaPublica:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MinhaVPC
      Tags:
        - Key: Name
          Value: Rota-Publica

  RotaInternet:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RotaPublica
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  AssociacaoSubnet:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublica
      RouteTableId: !Ref RotaPublica

  GrupoSeguranca:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permitir SSH e HTTP
      VpcId: !Ref MinhaVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: SG-IaC

  InstanciaEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId

      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref SubnetPublica
          GroupSet:
            - !Ref GrupoSeguranca

      Tags:
        - Key: Name
          Value: EC2-IaC

Outputs:

  InstanceId:
    Description: ID da instância EC2
    Value: !Ref InstanciaEC2

  PublicIP:
    Description: IP público da instância
    Value: !GetAtt InstanciaEC2.PublicIp

  VpcId:
    Description: ID da VPC criada
    Value: !Ref MinhaVPC
